fix blur on safari

--- a/login.css
+++ b/login.css
@@ -10,8 +10,10 @@
 }
 
 * {
-    backface-visibility: hidden;
-    transform: translate3d(0, 0, 0);
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    -webkit-transform: translate3d(0, 0, 0);
+    -moz-transform: translate3d(0, 0, 0);
     margin: 0;
     padding: 0;
     box-sizing: border-box;
